# amazon-rekognition

./: README.md
Rekognition/: main.py  pyproject.toml
Rekognition/helpers/: rekognition.py  s3.py
