[tool.poetry]
name = "rekognition"
version = "0.1.0"
description = ""
authors = ["jvpersuhn"]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.23.3"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
